--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">PractCook</string>
+    <string name="facebook_application_id" translatable="false">170679083477570</string>
+    <string name="facebook_login_protocol_scheme" translatable="false">fb170679083477570</string>
+    <string name="sign_in_cancelled">Login cancelled</string>
+    <string name="no_internet_connection">No internet connection</string>
+    <string name="unknown_error">Try again later</string>
+    <string name="unknown_sign_in_response">Something went wrong</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
